# llm_review

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  structure.txt
db/: importer.py  schema.sql
docs/: index.html
docs/css/: components.css  graphrun.css  variables.css
docs/js/: app.js  data.js
resource/: SETUP_UV.md  open-review-index.json
resource/docker/: docker-compose.redis.yml
resource/openreview/: 2580_when_should_agents_explore_.json  3199_causal_imitation_learning_via.json  4264_A_Versatile_Causal_Discov.json  reg_237_unsupervised_learning_of_causa.json  reg_2924_contrastive_unsupervised_learn.json  reg_7229_A_Unified_Causal_View_of_.json  reg_8088_A_Novel_Autoencoder_Based.json
resource/results/: 2026-04-21T14-26-52_229_Chemical_Language_Models_H.json  2026-04-21T14-34-38_229_Chemical_Language_Models_H.json  index.json  (+31 more)
scripts/: clean-cache.ps1  clean-cache.py  import-runs.py  run-app.ps1  run-app.py  run-redis-dashboard.py  run-test.ps1  run-test.py  start-venv.py  stop-app.ps1
src/: config.py  container.py  controller.py  dev_controller.py  main.py  settings.py
test/: conftest.py  test_agent.py  test_backup.py  test_controller.py  test_db_repository.py  test_graph.py  test_graph_message_builders.py  test_import_runs.py  test_integration.py  test_paper_repository.py  test_prompt_builders.py  test_prompt_repository.py  test_prompt_selection.py  test_rag.py  test_redis_cache.py  test_redis_index.py  test_retrieval.py
ui/: index.html
ui-react/: index.html  package-lock.json  package.json  vite.config.ts
(+215 files in other folders)
